--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
-h1 {
-    color: blue;
+@font-face {
+    font-family: Norse;
+    src: url(./assets/Norse-Bold.otf);
 }
 
 aside {
@@ -8,9 +9,9 @@ aside {
     height: 100%;
 }
 
-img {
+.background {
     max-width: 100%;
-    height: 100%
+    height: 100%;
 }
 
 main {
@@ -65,4 +66,25 @@ button {
     padding-bottom: 10px;
     border: none;
     border-radius: 5px;
+}
+
+.logo {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100px;
+    background: rgba(0, 0, 0, 0.473);
+    align-items: center;
+    justify-content: center;
+    transform: translateY(300px);
+}
+
+.logo img {
+    max-height: 100%;
+}
+
+.logo p{
+   font-family: Norse;
+    color: white;
+    font-size: 50px;
 }
